build_errors.txt
[  1%] Building CUDA object CMakeFiles/cuda_zstd_shared.dir/src/cuda_zstd_memory_pool_complex.cu.o
[  2%] Building CXX object CMakeFiles/cuda_zstd_shared.dir/src/cuda_zstd_stream_pool.cpp.o
[  3%] Building CUDA object CMakeFiles/cuda_zstd_shared.dir/src/workspace_manager.cu.o
[  4%] Building CXX object CMakeFiles/cuda_zstd_shared.dir/src/error_context.cpp.o
[  5%] Building CUDA object CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_memory_pool_complex.cu.o
[  6%] Building CXX object CMakeFiles/cuda_zstd_static.dir/src/error_context.cpp.o
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1350): error: identifier "update_allocation_latency" is undefined
      update_allocation_latency(result.allocation_time_ns);
      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1473): error: class "cuda_zstd::memory::MemoryPoolManager" has no member "update_allocation_latency"
  void MemoryPoolManager::update_allocation_latency(uint64_t latency_ns) {
                          ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1474): error: identifier "total_allocation_latency_ns_" is undefined
      total_allocation_latency_ns_.fetch_add(latency_ns, std::memory_order_relaxed);
      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1475): error: identifier "allocation_latency_count_" is undefined
      allocation_latency_count_.fetch_add(1, std::memory_order_relaxed);
      ^

4 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu".
make[2]: *** [CMakeFiles/cuda_zstd_shared.dir/build.make:254: CMakeFiles/cuda_zstd_shared.dir/src/cuda_zstd_memory_pool_complex.cu.o] Error 2
make[2]: *** Waiting for unfinished jobs....
/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1350): error: identifier "update_allocation_latency" is undefined
      update_allocation_latency(result.allocation_time_ns);
      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1473): error: class "cuda_zstd::memory::MemoryPoolManager" has no member "update_allocation_latency"
  void MemoryPoolManager::update_allocation_latency(uint64_t latency_ns) {
                          ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1474): error: identifier "total_allocation_latency_ns_" is undefined
      total_allocation_latency_ns_.fetch_add(latency_ns, std::memory_order_relaxed);
      ^

/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu(1475): error: identifier "allocation_latency_count_" is undefined
      allocation_latency_count_.fetch_add(1, std::memory_order_relaxed);
      ^

4 errors detected in the compilation of "/mnt/d/Research Experiments/TDPE_and_GPU_loading/NVComp with ZSTD/src/cuda_zstd_memory_pool_complex.cu".
make[2]: *** [CMakeFiles/cuda_zstd_static.dir/build.make:254: CMakeFiles/cuda_zstd_static.dir/src/cuda_zstd_memory_pool_complex.cu.o] Error 2
make[1]: *** [CMakeFiles/Makefile2:151: CMakeFiles/cuda_zstd_static.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:177: CMakeFiles/cuda_zstd_shared.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
